@@ -117,6 +117,23 @@ Optional, defaults to `0`. This setting controls the default debugging message
 verbosity passed to NUT daemons. As an environment variable, its priority sits
 between that of 'DEBUG_MIN' setting of a driver and the command-line options.
 
+*NUT_DEBUG_SYSLOG*::
+Optional, unset by default.
+Normally NUT can (attempt to) use the syslog or Event Log (WIN32), but the
+environment variable 'NUT_DEBUG_SYSLOG' allows to bypass it, and perhaps keep
+the daemons logging to stderr (useful e.g. in NUT Integration Test suite to
+not pollute the OS logs, or in systemd where stderr and syslog both go into
+the same journal). Recognized values:
++
+[options="header"]
+|===========================================================================
+| Value       | Description
+| `stderr`    | Disabled and background() keeps stderr attached
+| `none`      | Disabled and background() detaches stderr as usual
+| `default`   | Not disabled
+| unset/other | Not disabled
+|===========================================================================
+
 EXAMPLE
 -------
 
