@@ -116,6 +116,12 @@ https://github.com/networkupstools/nut/milestone/11
      exiting (and/or start-up has aborted due to configuration or run-time
      issues). Warning about "world readable" files clarified. [#2417]
 
+ - common code: introduced a `NUT_DEBUG_SYSLOG` environment variable to tweak
+   activation of syslog message emission (and related detachment of `stderr`
+   when backgrounding), primarily useful for NIT and perhaps systemd. Most
+   methods relied on logging bits being set, so this change aims to be minimally
+   invasive to impact setting of those bits (or not) in the first place. [#2394]
+
  - common code: root-owned daemons now use not the hard-coded `PIDPATH` value
    set by the `configure` script during build, but can override it with a
    `NUT_PIDPATH` environment variable in certain use-cases (such as tests).
